test/files/neg/t12294.scala
object Test {
  "\u"
  "\u   "
  "\uuuu"
  "\uuuuu"
  "\u123"
  "\uu123"
  """\u"""
  """\u   """
  """\uuuu"""
  """\uuuuu"""
  """\u123"""
  """\uu123"""
}